@@ -462,29 +462,26 @@ SQLRETURN SQLDriverConnectW(
 
         strcpy( driver_name, driver );
 
-        SQLGetPrivateProfileString( driver, "Driver", "",
+#ifdef PLATFORM64
+        SQLGetPrivateProfileString( driver, "Driver64", "",
                 lib_name, sizeof( lib_name ), "ODBCINST.INI" );
 
-        if ( lib_name[ 0 ] == '\0' )
-        {
-            /*
-             * at this point a box could pop up to allow the selection of a driver
-             *
-             * do this later
-             */
+		if ( lib_name[ 0 ] == '\0' )
+		{
+        	SQLGetPrivateProfileString( driver, "Driver", "",
+                	lib_name, sizeof( lib_name ), "ODBCINST.INI" );
+		}
+#else
+        SQLGetPrivateProfileString( driver, "Driver", "",
+                lib_name, sizeof( lib_name ), "ODBCINST.INI" );
+#endif
 
-            dm_log_write( __FILE__, 
-                    __LINE__, 
-                    LOG_INFO, 
-                    LOG_INFO, 
-                    "Error: IM002" );
+        /*
+         * Assume if its not in a odbcinst,ini then its a direct reference
+         */
 
-            __post_internal_error( &connection -> error,
-                    ERROR_IM002, NULL,
-                    connection -> environment -> requested_version );
-            __release_conn( &con_struct );
-
-            return function_return( SQL_HANDLE_DBC, connection, SQL_ERROR );
+        if ( lib_name[ 0 ] == '\0' ) {
+            strcpy( lib_name, driver );
         }
 
         strcpy( connection -> dsn, "" );
